objects/Questionario_de_segmenta_o__c.object
<CustomObject>
    <fields>
        <fullName>AS_10_CK__c</fullName>
        <label>AS 10 + CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_1_a_4_CK__c</fullName>
        <label>AS 1 a 4 CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS_5_a_9_CK__c</fullName>
        <label>AS 5 a 9 CK</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Abrangencia__c</fullName>
        <description>Estados, cidades, bairros de abrangência</description>
        <inlineHelpText>Estados, cidades, bairros de abrangência</inlineHelpText>
        <label>Abrangência</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Academias__c</fullName>
        <label>Academias</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bacardi_de_faturamento__c</fullName>
        <label>Bacardi - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bacardi_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bacardi - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bacardi_qtde_SKUs__c</fullName>
        <label>Bacardi - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Especial__c</fullName>
        <label>Bar Especial</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Popular__c</fullName>
        <label>Bar Popular</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boates__c</fullName>
        <label>Boates</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campari_de_faturamento__c</fullName>
        <label>Campari - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campari_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campari - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campari_qtde_SKUs__c</fullName>
        <label>Campari - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carteira_total_de_clientes__c</fullName>
        <label>Carteira total de clientes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cervejas_de_faturamento__c</fullName>
        <label>Cervejas - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cervejas_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cervejas - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cervejas_qtde_SKUs__c</fullName>
        <label>Cervejas - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionários de segmentação</relationshipLabel>
        <relationshipName>Question_rios_de_segmenta_o</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Clientes_PRB__c</fullName>
        <label>Clientes PRB</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conveni_ncia__c</fullName>
        <label>Conveniência</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diageo_de_faturamento__c</fullName>
        <label>Diageo - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Diageo_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diageo - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diageo_qtde_SKUs__c</fullName>
        <label>Diageo - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empresa_1__c</fullName>
        <label>Empresa 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empresa_1_faturamento__c</fullName>
        <label>Empresa 1 - % faturamento</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Empresa_1_qtde_SKUs__c</fullName>
        <label>Empresa 1 - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empresa_2__c</fullName>
        <label>Empresa 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empresa_2_faturamento__c</fullName>
        <label>Empresa 2 - % faturamento</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Empresa_2_qtde_SKUs__c</fullName>
        <label>Empresa 2 - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Empresa_3__c</fullName>
        <label>Empresa 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empresa_3_faturamento__c</fullName>
        <label>Empresa 3 - % faturamento</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Empresa_3_qtde_SKUs__c</fullName>
        <label>Empresa 3 - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energeticos_de_faturamento__c</fullName>
        <label>Energeticos - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energeticos_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energeticos - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energeticos_qtde_SKUs__c</fullName>
        <label>Energeticos - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entrega_Pronta_entrega__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega - Pronta entrega</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrega_balc_o__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega - balcão</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrega_noturna__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega - noturna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrega_pr_venda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega - pré venda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entrega_prazo_de_entrega__c</fullName>
        <inlineHelpText>em dias</inlineHelpText>
        <label>Entrega - prazo de entrega</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclusividade__c</fullName>
        <label>Exclusividade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trabalha com concorrentes para o mesmo tipo de produto</fullName>
                </value>
                <value>
                    <fullName>Exclusividade PRB nas categorias</fullName>
                </value>
                <value>
                    <fullName>Trabalha com concorrente diretos PRB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faz_matinal_semanal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faz matinal semanal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faz_troca_de_mercadorias__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Faz troca de mercadorias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frota_pr_pria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frota própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frota_quantidade__c</fullName>
        <label>Frota - quantidade</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Motel__c</fullName>
        <label>Hotel/ Motel</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instala_o_do_dep_sito_pr_pria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalação do depósito própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instala_o_do_escrit_rio_pr_pria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalação do escritório própria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>M_dia_clientes_positivados_mensalmente__c</fullName>
        <label>Média clientes positivados mensalmente</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchandising__c</fullName>
        <label>Merchandising</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executa</fullName>
                </value>
                <value>
                    <fullName>Não executa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Muller_de_faturamento__c</fullName>
        <label>Muller - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Muller_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muller - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Muller_qtde_SKUs__c</fullName>
        <label>Muller - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_gerentes__c</fullName>
        <label>No.gerentes</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_merchandisers__c</fullName>
        <label>No.merchandisers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_supervisores__c</fullName>
        <label>No.supervisores</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_vendedores__c</fullName>
        <label>No.vendedores</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_Atacados_Distribuidores__c</fullName>
        <label>Outros Atacados/Distribuidores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros__c</fullName>
        <label>Outros</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_de_faturamento__c</fullName>
        <label>Outros - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Outros_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outros - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outros_qtde_SKUs__c</fullName>
        <label>Outros - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P_s_venda__c</fullName>
        <label>Pós-venda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Oferece</fullName>
                </value>
                <value>
                    <fullName>Não oferece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Padaria__c</fullName>
        <label>Padaria</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pernod_Ricard_de_faturamento__c</fullName>
        <label>Pernod Ricard - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pernod_Ricard_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pernod Ricard - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pernod_Ricard_qtde_SKUs__c</fullName>
        <label>Pernod Ricard - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_N_Vendedores_Externos__c</fullName>
        <label>RH - Nº Vendedores Externos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_N_Vendedores_Externos_q_vendem_PRB__c</fullName>
        <label>RH - Nº Vendedores Externos q vendem PRB</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_N_Vendedores_Internos__c</fullName>
        <label>RH - Nº Vendedores Internos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_N_Vendedores_Internos_q_vendem_PRB__c</fullName>
        <label>RH - Nº Vendedores Internos q vendem PRB</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_No_gerentes_de_vendas__c</fullName>
        <label>RH - No gerentes de vendas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_No_promotores__c</fullName>
        <label>RH - No. promotores</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_No_supervisores_de_vendas__c</fullName>
        <label>RH - No.supervisores de vendas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_No_total_de_colaboradores__c</fullName>
        <label>RH - No total de colaboradores</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_Outros__c</fullName>
        <label>RH - Outros</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_Remunera_o__c</fullName>
        <label>RH - Remuneração</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RH_possui_quadro_de_metas_por_vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RH - possui quadro de metas por vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RH_registrados_CLT__c</fullName>
        <label>RH- registrados CLT</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restaurantes__c</fullName>
        <label>Restaurantes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rh_Possui_vendedores_dedicados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rh - Possui vendedores dedicados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rota_fixa_por_vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rota fixa por vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sortimento_por_vendedor__c</fullName>
        <label>Sortimento por vendedor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mais de 1.500 Ítens</fullName>
                </value>
                <value>
                    <fullName>Entre 800 e 1.500 Ítens</fullName>
                </value>
                <value>
                    <fullName>No máximo 800 Ítens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table_Dance__c</fullName>
        <label>Table Dance</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendedor_automatizado_com_palm_ou_note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendedor automatizado com palm ou note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vinhos_de_faturamento__c</fullName>
        <label>Vinhos - part. faturamento (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vinhos_distribui__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vinhos - distribui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vinhos_qtde_SKUs__c</fullName>
        <label>Vinhos - qtde SKUs</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rea_de_armazenagem_m2__c</fullName>
        <label>Área de armazenagem (m2)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rea_de_vendas_pr_pria__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>loja ou balcão</inlineHelpText>
        <label>Área de vendas própria</label>
        <type>Checkbox</type>
    </fields>
    <label>Questionário de segmentação</label>
    <nameField>
        <displayFormat>QS{000000}</displayFormat>
        <label>Número do questionário de segmentação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionários de segmentação</pluralLabel>
    <recordTypes>
        <fullName>Distribuidor</fullName>
        <active>true</active>
        <description>Formulário de avaliação para distribuidor</description>
        <label>Distribuidor</label>
    </recordTypes>
    <recordTypes>
        <fullName>On_Trade</fullName>
        <active>true</active>
        <label>On Trade</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>